# Robot_trajectorrry

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py  format.sh
apps/: CMakeLists.txt
apps/greeter/: main.cpp
apps/trajectory_generator/: main.cpp
cmake/: CompilerOptions.cmake  Conan.cmake  Coverage.cmake  Doxygen.cmake
docs/: Doxyfile.in
include/hello/: hello.h
include/umrob/: polynomial.h  trajectory_generator.h
src/: CMakeLists.txt
src/hello/: hello.cpp
src/robot_trajectory/: polynomial.cpp  trajectory_generator.cpp
test_package/: conanfile.py  example.cpp
tests/: CMakeLists.txt
tests/common/: main.cpp
tests/hello/: greeter.cpp
tests/trajectory/: polynomial.cpp  trajectory.cpp
